reorganize the repo, putting the game into its own (new) sub-project