@@ -1,106 +1,9 @@
+// Gradle build script for the Bats2 project
+
 plugins {
-    id 'application'
-    id 'java'
+    id 'base' // to add a "clean" task to the root project
 }
 
-description = 'Archer Game Template'
-
-// select one source-code (JDK) option
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
-
-// select one version of the Engine:
-ext.jmeVersion = '3.5.2-stable'
-
-gradle.projectsEvaluated {
-    tasks.withType(JavaCompile) { // compile-time options:
-        options.compilerArgs << '-Xdiags:verbose'
-        options.compilerArgs << '-Xlint:unchecked'
-        //options.deprecation = true // to provide detailed deprecation warnings
-        options.encoding = 'UTF-8'
-    }
-    tasks.withType(JavaExec) { // runtime options:
-        args = []
-        classpath sourceSets.main.runtimeClasspath
-        //debug true
-        enableAssertions true
-        //jvmArgs '-verbose:gc'
-        //jvmArgs '-Xbatch'
-        //jvmArgs '-Xms512m', '-Xmx512m'
-        //jvmArgs '-XX:+PrintCompilation'
-        //jvmArgs '-XX:+UseConcMarkSweepGC'
-        jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
-    }
-}
-
-// NetBeans will automatically add "run" and "debug" tasks relying on the
-// "mainClass" property. You may however define the property prior executing
-// tasks by passing a "-PmainClass=<QUALIFIED_CLASS_NAME>" argument.
-//
-// Note however, that you may define your own "run" and "debug" task if you
-// prefer. In this case NetBeans will not add these tasks but you may rely on
-// your own implementation.
-mainClassName = 'mygame.Main'
-if (!hasProperty('mainClass')) {
-    ext.mainClass = mainClassName
-}
-jar.manifest.attributes('Main-Class': mainClassName)
-
-repositories {
-    //mavenLocal()
-    mavenCentral()
-    //maven { url 'http://nifty-gui.sourceforge.net/nifty-maven-repo' }
-    maven { url 'https://jitpack.io' }
-    maven { url 'https://jcenter.bintray.com/' }
-
-    // Read more about repositories here:
-    //   https://docs.gradle.org/current/userguide/dependency_management.html#sec:repositories
-}
-
-dependencies {
-    // You can read more about how to add dependencies here:
-    //   https://docs.gradle.org/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
-
-    // Engine
-    implementation 'org.jmonkeyengine:jme3-core:' + jmeVersion
-    implementation 'org.jmonkeyengine:jme3-desktop:' + jmeVersion
-    implementation 'org.jmonkeyengine:jme3-effects:' + jmeVersion
-    //implementation 'org.jmonkeyengine:jme3-networking:' + jmeVersion
-    //implementation 'org.jmonkeyengine:jme3-niftygui:' + jmeVersion
-    //implementation 'org.jmonkeyengine:jme3-terrain:' + jmeVersion
-
-    // Minie
-    implementation 'com.github.stephengold:Minie:6.2.0+big3'
-
-    // select one version of LWJGL
-    runtimeOnly 'org.jmonkeyengine:jme3-lwjgl:' + jmeVersion  // LWJGL 2.x
-    //runtimeOnly 'org.jmonkeyengine:jme3-lwjgl3:' + jmeVersion // LWJGL 3.x
-
-    runtimeOnly 'org.jmonkeyengine:jme3-jogg:' + jmeVersion
-
-    // Libraries related to the Lemur GUI and Groovy:
-    //implementation 'com.simsilica:lemur:1.15.0'
-    //implementation 'com.simsilica:lemur-props:1.1.1'
-    //implementation 'com.simsilica:lemur-proto:1.12.0'
-    //runtimeOnly 'org.codehaus.groovy:groovy-jsr223:3.0.7'
-    
-    // Additional filters
-    implementation files('lib/shaderblow-ex-1.0.0.jar')
-    
-    runtimeOnly files('lib/jme-materialize.jar')
-}
-
-// cleanup tasks
-clean.dependsOn('cleanDLLs', 'cleanDyLibs', 'cleanLogs', 'cleanSOs')
-task cleanDLLs(type: Delete) {
-    delete fileTree(dir: '.', include: '*.dll')
-}
-task cleanDyLibs(type: Delete) {
-    delete fileTree(dir: '.', include: '*.dylib')
-}
-task cleanLogs(type: Delete) {
-    delete fileTree(dir: '.', include: 'hs_err_pid*.log')
-}
-task cleanSOs(type: Delete) {
-    delete fileTree(dir: '.', include: '*.so')
+subprojects {
+    apply from: rootProject.file('common.gradle')
 }
